@@ -27,8 +27,8 @@ Rails::Initializer.run do |config|
   # config.gem "hpricot", :version => '0.6', :source => "http://code.whytheluckystiff.net"
   # config.gem "sqlite3-ruby", :lib => "sqlite3"
   # config.gem "aws-s3", :lib => "aws/s3"
-  config.gem "locale_rails", :version => "2.0.4"
-  config.gem "gettext_rails", :version => "2.0.4"
+  config.gem "locale_rails", :version => "2.0.5"
+  config.gem "gettext_rails", :version => "2.1.0"
 
   # Only load the plugins named here, in the order given. By default, all plugins 
   # in vendor/plugins are loaded in alphabetical order.
